--- a/src/client/index.html
+++ b/src/client/index.html
@@ -400,6 +400,7 @@
     <emoji-table></emoji-table>
     <leader-board></leader-board>
     <build-menu></build-menu>
+    <strike-package-menu></strike-package-menu>
     <win-modal></win-modal>
     <game-starting-modal></game-starting-modal>
     <top-bar></top-bar>
