--- a/src/client/index.html
+++ b/src/client/index.html
@@ -112,24 +112,10 @@
     </script>
 
     <!-- Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=AW-16702609763"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-
-      gtag("js", new Date());
-      gtag("config", "AW-16702609763");
-    </script>
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-WQGQQ8RDN4"
+      src="https://www.googletagmanager.com/gtag/js?id=G-BHJXE04JDB"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -138,7 +124,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-WQGQQ8RDN4");
+      gtag("config", "G-BHJXE04JDB");
     </script>
   </head>
 
