--- a/src/client/index.html
+++ b/src/client/index.html
@@ -339,7 +339,7 @@
           </a>
           <a
             target="_blank"
-            href="https://discord.gg/jRpxXvG42t"
+            href="https://discord.gg/vNcACpjfFB"
             class="t-link"
           >
             <span data-i18n="main.join_discord"> Join the Discord! </span>
