Refactor code structure for improved readability and maintainability

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenFront (ALPHA)</title>
+    <title>TacticFront</title>
     <link rel="manifest" href="../../resources/manifest.json" />
 
     <!-- Critical CSS to prevent FOUC -->
@@ -133,15 +133,15 @@
   >
     <header class="l-header">
       <div class="l-header__content">
-        <svg
+        <!-- <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 1364 259"
           width="100%"
           height="100%"
           fill="currentColor"
           class="l-header__logo"
-        >
-          <defs>
+        > -->
+        <!-- <defs>
             <linearGradient
               id="logo-gradient"
               x1="0%"
@@ -152,8 +152,9 @@
               <stop offset="0%" style="stop-color: #2563eb" />
               <stop offset="100%" style="stop-color: #3b82f6" />
             </linearGradient>
-          </defs>
-          <g>
+          </defs> -->
+        <img src="../../resources/images/logo/TacticFront-logo.png" />
+        <!-- <g>
             <path
               d="M0,174V51h15.24v-17.14h16.81v-16.98h16.96V0h1266v17.23h17.13v16.81h16.98v16.96h14.88v123h-15.13v17.08h-17.08v17.08h-16.9v17.04H324.9v16.86h-16.9v16.95h-102v-17.12h-17.07v-17.05H48.73v-17.05h-16.89v-16.89H14.94v-16.89H0ZM1297.95,17.35H65.9v16.7h-17.08v17.08h-14.5v123.08h14.85v16.9h17.08v17.08h139.9v17.08h17.08v16.36h67.9v-16.72h17.08v-17.07h989.88v-17.07h17.08v-16.9h14.44V50.8h-14.75v-17.08h-16.9v-16.37Z"
             />
@@ -188,7 +189,7 @@
               d="M835.05,121.08v-33.75h33.76v16.43h16.85v33.96h-33.43v-16.79c-6.13,0-11.73,0-17.32,0,0,0,.14.14.14.14Z"
             />
           </g>
-        </svg>
+        </svg> -->
         <div class="l-header__highlightText">v23.0</div>
       </div>
     </header>
@@ -346,20 +347,20 @@
           </a>
         </div>
         <div class="l-footer__col t-text-white">
-          <a
+          <!-- <a
             href="https://github.com/openfrontio/OpenFrontIO"
             class="t-link inline-flex items-center space-x-2"
             target="_blank"
-          >
-            ©2025 OpenFront™
-            <img
+          > -->
+          ©2025 TacticFront
+          <!-- <img
               src="../../resources/icons/github-mark-white.svg"
               alt="GitHub"
               width="20"
               height="20"
               class="ml-2 mr-4"
-            />
-          </a>
+            /> -->
+          <!-- </a> -->
           <a href="/privacy-policy.html" class="t-link" target="_blank">
             Privacy Policy
           </a>
