--- a/resources/privacy-policy.html
+++ b/resources/privacy-policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenFront - Privacy Policy</title>
+    <title>TacticFront - Privacy Policy</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -100,10 +100,7 @@
       </li>
       <li>
         <p>
-          <strong>Company</strong> (referred to as either &quot;the
-          Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in
-          this Agreement) refers to OpenFront LLC, NORTHWEST REGISTERED AGENT,
-          INC. 2108 N ST STE N SACRAMENTO, CA 95816.
+          <strong>Company</strong>
         </p>
       </li>
       <li>
@@ -167,12 +164,12 @@
       </li>
       <li>
         <p>
-          <strong>Website</strong> refers to OpenFront, accessible from
+          <strong>Website</strong> refers to TacticFront, accessible from
           <a
-            href="https://openfront.io"
+            href="https://tacticfront.io"
             rel="external nofollow noopener"
             target="_blank"
-            >https://openfront.io</a
+            >https://tacticfront.io</a
           >
         </p>
       </li>
@@ -595,7 +592,7 @@
       If you have any questions about this Privacy Policy, You can contact us:
     </p>
     <ul>
-      <li>By email: openfrontio@gmail.com</li>
+      <li>By email: support@tacticfront.io</li>
     </ul>
 
     <h2>Advertising</h2>
