--- a/src/client/index.html
+++ b/src/client/index.html
@@ -190,7 +190,7 @@
             />
           </g>
         </svg> -->
-        <div class="l-header__highlightText">v2.1</div>
+        <div class="l-header__highlightText">v2.1.1</div>
       </div>
     </header>
     <div class="bg-image"></div>
@@ -291,6 +291,7 @@
       class="flex flex-column gap-2 fixed right-[10px] top-[10px] z-50 flex flex-col w-32 sm:w-32 lg:w-48"
     >
       <options-menu></options-menu>
+      <replay-panel></replay-panel>
       <player-info-overlay></player-info-overlay>
     </div>
     <div
