feat: add LobbyAdPopup component and integrate into main application

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -382,6 +382,7 @@
       </div>
     </footer>
     <!-- Game modals and overlays -->
+    <lobby-ad class="block"></lobby-ad>
     <single-player-modal></single-player-modal>
     <host-lobby-modal></host-lobby-modal>
     <join-private-lobby-modal></join-private-lobby-modal>
