feat: enhance language selection and modal integration in settings

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -261,9 +261,7 @@
           block
           secondary
         ></o-button>
-        <div class="container__row">
-          <lang-selector class="w-full"></lang-selector>
-        </div>
+        <div class="container__row"></div>
       </div>
     </main>
 
@@ -403,6 +401,8 @@
     <unit-info-modal></unit-info-modal>
     <news-modal></news-modal>
     <left-in-game-ad></left-in-game-ad>
+
+    <lang-selector class="w-full"></lang-selector>
     <div
       id="language-modal"
       class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex justify-center items-center"
