--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,103 +6,38 @@
     <title>TacticFront</title>
     <link rel="manifest" href="../../resources/manifest.json" />
 
-    <!-- Critical CSS to prevent FOUC -->
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Optionally add font for extra retro feel -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      .preload * {
-        -webkit-transition: none !important;
-        -moz-transition: none !important;
-        -ms-transition: none !important;
-        -o-transition: none !important;
-        transition: none !important;
+      body {
+        font-family: "Share Tech Mono", monospace;
       }
 
-      html {
-        visibility: visible;
-        opacity: 1;
-      }
-
-      html.preload {
-        visibility: hidden;
-        opacity: 0;
-      }
-
-      .bg-image {
+      /* Optional grid overlay for retro feel */
+      body::before {
         content: "";
-        background-image: url("/images/EuropeBackground.webp");
-        background-position: center;
-        background-attachment: fixed;
-        background-size: cover;
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        filter: blur(4px);
-        z-index: -1;
-      }
-
-      .dark .bg-image {
-        filter: blur(4px) brightness(0.7);
-      }
-
-      .left-gutter-ad {
-        position: fixed;
-        left: 0;
-        top: 200px;
-        /* Changed from top: 50% */
-        transform: none;
-        /* Removed translateY(-50%) since we don't need to center anymore */
-        z-index: 40;
-        width: 300px;
-        height: 600px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        pointer-events: auto;
-      }
-
-      .left-gutter-ad google-ad {
-        width: 100%;
-        height: 100%;
-        display: block;
-      }
-
-      .right-gutter-ad {
-        position: fixed;
-        right: 0;
-        top: 200px;
-        /* Changed from top: 50% */
-        transform: none;
-        /* Removed translateY(-50%) since we don't need to center anymore */
-        z-index: 40;
-        width: 300px;
-        height: 600px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        pointer-events: auto;
-      }
-
-      .right-gutter-ad google-ad {
-        width: 100%;
-        height: 100%;
-        display: block;
-      }
-
-      /* Media query to hide the gutter ad on smaller screens */
-      @media (max-width: 1280px) {
-        .left-gutter-ad {
-          display: none;
-        }
-
-        .right-gutter-ad {
-          display: none;
-        }
-      }
-
-      /* display:none if child has class parent-hidden since we can't use shadow DOM in Lit due to Tailwind */
-      .component-hideable:has(> .parent-hidden) {
-        display: none;
+        inset: 0;
+        background:
+          repeating-linear-gradient(
+            to right,
+            transparent,
+            transparent 31px,
+            rgba(255, 255, 0, 0.03) 32px
+          ),
+          repeating-linear-gradient(
+            to bottom,
+            transparent,
+            transparent 31px,
+            rgba(255, 255, 0, 0.03) 32px
+          );
+        pointer-events: none;
+        z-index: 0;
       }
     </style>
 
@@ -128,141 +63,177 @@
     </script>
   </head>
 
-  <body
-    class="h-full select-none font-sans min-h-screen bg-opacity-0 bg-cover bg-center bg-fixed transition-opacity duration-300 ease-in-out flex flex-col"
-  >
-    <header class="l-header">
-      <div class="l-header__content">
-        <!-- <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 1364 259"
-          width="100%"
-          height="100%"
-          fill="currentColor"
-          class="l-header__logo"
-        > -->
-        <!-- <defs>
-            <linearGradient
-              id="logo-gradient"
-              x1="0%"
-              y1="0%"
-              x2="100%"
-              y2="0%"
-            >
-              <stop offset="0%" style="stop-color: #2563eb" />
-              <stop offset="100%" style="stop-color: #3b82f6" />
-            </linearGradient>
-          </defs> -->
-        <img src="../../resources/images/logo/TacticFront-logo-small.png" />
-        <!-- <g>
-            <path
-              d="M0,174V51h15.24v-17.14h16.81v-16.98h16.96V0h1266v17.23h17.13v16.81h16.98v16.96h14.88v123h-15.13v17.08h-17.08v17.08h-16.9v17.04H324.9v16.86h-16.9v16.95h-102v-17.12h-17.07v-17.05H48.73v-17.05h-16.89v-16.89H14.94v-16.89H0ZM1297.95,17.35H65.9v16.7h-17.08v17.08h-14.5v123.08h14.85v16.9h17.08v17.08h139.9v17.08h17.08v16.36h67.9v-16.72h17.08v-17.07h989.88v-17.07h17.08v-16.9h14.44V50.8h-14.75v-17.08h-16.9v-16.37Z"
-            />
-            <path
-              d="M189.1,154.78v17.07h-16.9v16.75h-51.07v-16.42h-16.9v-17.07h-16.97v-84.88h16.63v-17.07h16.9v-16.84h51.07v16.5h17.07v17.07h16.7v84.89h-16.54ZM137.87,53.1v17.15h-16.6v84.86h16.97v16.61h16.89v-16.97h16.6v-84.86h-16.97v-16.79h-16.89Z"
-            />
-            <path
-              d="M273.91,104.06v-16.73h50.92v16.45h16.85v68.05h-16.44v17.06h-50.96v16.88h16.4v16.96h-67.28v-16.61h16.33v-101.86h-16.38v-16.98h33.4v16.63c6.12,0,11.72,0,17.31,0,0,22.56,0,45.13,0,67.75h33.59v-67.61h-33.73Z"
-            />
-            <path
-              d="M631.12,188.64v-16.36h16.53V53.2h-16.25v-16.86h118.33v33.29h-16.65v-16.36h-50.72v50.44h33.36v-16.35h16.99v50.25h-16.6v-16.33h-33.73v50.65h16.37v16.72h-67.63Z"
-            />
-            <path
-              d="M596.78,103.8v84.94h-33.54v-84.39h-34.03v84.25h-33.85v-101.29h84.5v16.49h16.93Z"
-            />
-            <path
-              d="M1107.12,188.71v-84.34h-34.03v84.37h-33.7v-101.41h84.42v16.41h16.86v84.96h-33.54Z"
-            />
-            <path
-              d="M988.1,171.78v16.87h-67.88v-16.38h-16.87v-68.06h16.38v-16.87h68.06v16.38h16.87v68.06h-16.55ZM970.78,104.35h-33.39v67.38h33.39v-67.38Z"
-            />
-            <path
-              d="M460.77,155.38v16.49h-16.58v16.83h-68.05v-16.5h-16.83v-68.05h16.49v-16.83h68.05v16.49h16.83v34.06h-67.31v33.82h33.47v-16.31h33.92ZM393.39,104.18v16.56h33.3v-16.56h-33.3Z"
-            />
-            <path
-              d="M1209.13,172h-16.9v-67.9h-16.96v-16.9h16.68v-17.08h16.9v-16.82h16.9v33.58h50.98v16.91h-50.4v67.96h16.48v-16.43h50.95v16.54h-16.55v16.76h-68.08v-16.6Z"
-            />
-            <path
-              d="M834.91,120.94v16.96h-16.65v33.88h16.41v16.96h-67.29v-16.63h16.34v-67.87h-16.4v-16.97h50.42v33.81h17.3l-.14-.14Z"
-            />
-            <path
-              d="M835.05,121.08v-33.75h33.76v16.43h16.85v33.96h-33.43v-16.79c-6.13,0-11.73,0-17.32,0,0,0,.14.14.14.14Z"
-            />
-          </g>
-        </svg> -->
-        <div class="l-header__highlightText">v2.10.2</div>
+  <body class="min-h-screen bg-black text-yellow-400 font-mono flex flex-col">
+    <header
+      class="flex items-center justify-between px-8 py-4 border-b border-yellow-800"
+    >
+      <div class="flex items-center space-x-3">
+        <span class="text-2xl font-bold tracking-wider"
+          ><img
+            src="../../resources/images/logo/TacticFront-logo-small.png"
+            alt="Logo"
+            class="h-10"
+        /></span>
+        <span class="text-sm text-yellow-600 opacity-80">v2.11</span>
       </div>
+      <button
+        class="px-4 py-2 rounded border border-yellow-600 hover:bg-yellow-700 hover:text-black transition font-semibold"
+      >
+        Sign In
+      </button>
     </header>
-    <div class="bg-image"></div>
 
-    <!-- Main container with responsive padding -->
-    <main class="flex justify-center flex-grow">
-      <div class="container pt-12">
-        <o-button
-          id="login-discord"
-          title="Initializing..."
-          disable="true"
-          block
-        ></o-button>
-
-        <o-button
-          id="logout-discord"
-          title="Log out"
-          translationKey="main.log_out"
-          visible="false"
-          block
-        ></o-button>
-
-        <div class="container__row">
-          <flag-input class="w-[20%] md:w-[15%]"></flag-input>
-          <username-input class="relative w-full"></username-input>
-          <news-button
-            class="w-[20%] md:w-[15%] component-hideable"
-          ></news-button>
-        </div>
-        <div></div>
+    <!-- Main Content: Responsive Flex -->
+    <main
+      class="flex flex-1 flex-col lg:flex-row items-stretch gap-8 px-8 pt-10 bg-gradient-to-br from-black via-gray-900 to-black"
+    >
+      <!-- LEFT: Main Map/Game Panel -->
+      <section
+        class="flex-1 bg-yellow-900/5 rounded-xl p-6 shadow-lg flex flex-col justify-between max-w-2xl"
+      >
+        <!-- Map Preview & Title -->
         <div>
           <public-lobby class="block"></public-lobby>
         </div>
-        <div class="container__row container__row--equal">
-          <o-button
+
+        <!-- Secondary Actions -->
+        <div class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-3">
+          <button
+            class="bg-yellow-800 hover:bg-yellow-700 text-yellow-100 rounded py-2 font-semibold"
             id="host-lobby-button"
             title="Create Lobby"
             translationKey="main.create_lobby"
             block
             secondary
-          ></o-button>
-          <o-button
+          >
+            Create Game
+          </button>
+          <button
+            class="bg-yellow-800 hover:bg-yellow-700 text-yellow-100 rounded py-2 font-semibold"
+            id="single-player"
+            title="Single Player"
+            translationKey="main.single_player"
+            block
+          >
+            Single Player
+          </button>
+          <button
+            class="bg-yellow-800 hover:bg-yellow-700 text-yellow-100 rounded py-2 font-semibold"
             id="join-private-lobby-button"
             title="Join Lobby"
             translationKey="main.join_lobby"
             block
             secondary
-          ></o-button>
-          <!-- <o-button
-            id="chat-button"
-            title="Chat Test"
+          >
+            Join Lobby
+          </button>
+        </div>
+      </section>
+
+      <!-- RIGHT: Quick Join, Server Status, News -->
+      <aside class="flex flex-col gap-8 w-full max-w-sm">
+        <username-input class="relative w-full"></username-input>
+
+        <!-- Help Modal -->
+        <div
+          class="bg-yellow-900/5 rounded-xl p-6 shadow-lg flex flex-col gap-4"
+        >
+          <img
+            src="../../resources/images/logo/TacticFront-logo-small.png"
+            alt="Logo"
+            class="h-auto w-auto mb-2 mt-0"
+          />
+          <div class="flex items-center gap-2 mb-1">
+            <span class="text-xl">❓</span>
+            <span class="text-xl font-bold text-yellow-100">Player Help</span>
+          </div>
+          <p class="text-yellow-300 text-sm mb-2">
+            New? Get help, read the wiki, or join our Discord community:
+          </p>
+
+          <button
+            class="bg-yellow-800 hover:bg-yellow-700 text-yellow-100 rounded py-2 font-semibold"
+            id="help-button"
+            title="Instructions"
+            translationKey="main.instructions"
             block
             secondary
-          ></o-button> -->
+          >
+            <span>📖</span> Instructions
+          </button>
+
+          <a
+            href="https://openlynerd.com/a/tacticfront"
+            target="_blank"
+            class="w-full flex items-center justify-center gap-2 px-5 py-2.5 rounded-lg bg-green-700 hover:bg-green-800 text-white font-bold text-base transition"
+          >
+            <span>🌐</span> <span>Wiki</span>
+          </a>
+
+          <a
+            href="https://discord.gg/vNcACpjfFB"
+            target="_blank"
+            class="w-full flex items-center justify-center gap-2 px-5 py-2.5 rounded-lg bg-[#5865F2] hover:bg-[#4752C4] text-white font-bold text-base transition"
+          >
+            <img
+              src="../../resources/images/discord-white-icon.webp"
+              style="height: 1em"
+            />
+            <span>Join Discord</span>
+          </a>
+        </div>
+      </aside>
+      <aside class="flex flex-col gap-8 w-full max-w-sm">
+        <!-- Latest News -->
+        <div class="bg-yellow-900/5 rounded-xl p-6 shadow-lg">
+          <div class="mb-3 text-lg font-bold flex items-center gap-2">
+            📰 Latest News
+          </div>
+          <div class="space-y-4">
+            <div class="bg-yellow-700/10 p-3 rounded">
+              <span
+                class="px-2 py-1 text-xs rounded bg-green-700 text-white font-semibold"
+                >EVENT</span
+              >
+              <div class="mt-1 font-bold text-yellow-200">
+                Weekend tournaments starting soon
+              </div>
+              <div class="text-yellow-300 text-xs">
+                To play in the tournament sign into the game using an
+                OpenlyNerd.com Account
+              </div>
+              <div class="text-xs text-yellow-500 mt-1">5h ago</div>
+            </div>
+            <div class="bg-yellow-700/10 p-3 rounded">
+              <span
+                class="px-2 py-1 text-xs rounded bg-orange-700 text-white font-semibold"
+                >PATCH</span
+              >
+              <div class="mt-1 font-bold text-yellow-200">
+                Server Migration v2.11
+              </div>
+              <ul class="text-yellow-300 text-xs list-disc ml-4">
+                <li>Upgraded server infrastructure.</li>
+                <li>Hopefully fixes Desync issues for everyone.</li>
+              </ul>
+              <div class="text-xs text-yellow-500 mt-1">1d ago</div>
+            </div>
+          </div>
         </div>
 
-        <o-button
-          id="single-player"
-          title="Single Player"
-          translationKey="main.single_player"
-          block
-        ></o-button>
-
-        <o-button
-          id="help-button"
-          title="Instructions"
-          translationKey="main.instructions"
-          block
-          secondary
-        ></o-button>
-        <div class="container__row"></div>
-      </div>
+        <!-- Server Status -->
+        <div class="bg-yellow-900/5 rounded-xl p-6 shadow-lg">
+          <div class="mb-2 text-lg font-bold">Server Status - Coming Soon</div>
+          <div class="flex items-center justify-between mb-2">
+            <span>Players Online</span>
+            <span class="text-green-400 font-bold">1,240</span>
+          </div>
+          <div class="flex items-center justify-between">
+            <span>Active Games</span>
+            <span class="text-yellow-200 font-bold">42</span>
+          </div>
+        </div>
+      </aside>
     </main>
 
     <!-- User Setting -->
@@ -318,56 +289,16 @@
     </div>
 
     <!-- Footer section -->
-    <footer class="l-footer">
-      <div class="l-footer__content">
-        <div class="l-footer__col">
-          <a
-            href="https://youtu.be/jvHEvbko3uw?si=znspkP84P76B1w5I"
-            data-i18n="main.how_to_play"
-            class="t-link"
-            target="_blank"
-          >
-            How to Play
-          </a>
-          <a
-            href="https://openfront.miraheze.org/wiki/Main_Page"
-            data-i18n="main.wiki"
-            class="t-link"
-            target="_blank"
-          >
-            Wiki
-          </a>
-          <a
-            target="_blank"
-            href="https://discord.gg/vNcACpjfFB"
-            class="t-link"
-          >
-            <span data-i18n="main.join_discord"> Join the Discord! </span>
-          </a>
-        </div>
-        <div class="l-footer__col t-text-white">
-          <!-- <a
-            href="https://github.com/openfrontio/OpenFrontIO"
-            class="t-link inline-flex items-center space-x-2"
-            target="_blank"
-          > -->
-          ©2025 TacticFront
-          <!-- <img
-              src="../../resources/icons/github-mark-white.svg"
-              alt="GitHub"
-              width="20"
-              height="20"
-              class="ml-2 mr-4"
-            /> -->
-          <!-- </a> -->
-          <a href="/privacy-policy.html" class="t-link" target="_blank">
-            Privacy Policy
-          </a>
-          <a href="/terms-of-service.html" class="t-link" target="_blank">
-            Terms of Service
-          </a>
-        </div>
-      </div>
+    <footer
+      class="mt-12 py-4 border-t border-yellow-800 text-xs text-yellow-600 flex justify-center gap-6"
+    >
+      <!-- <a href="https://openlynerd.com/a/tacticfront" class="hover:underline">Wiki</a>
+    <a href="https://discord.gg/vNcACpjfFB" class="hover:underline">Discord</a> -->
+      <a href="/privacy-policy.html" class="hover:underline">Privacy Policy</a>
+      <a href="/terms-of-service.html" class="hover:underline"
+        >Terms of Service</a
+      >
+      <span>©2025 TacticFront</span>
     </footer>
     <!-- Game modals and overlays -->
     <lobby-ad class="block"></lobby-ad>
