feat: add flag input component to Active Games section for enhanced game management

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -232,6 +232,7 @@
             <span>Active Games</span>
             <span class="text-yellow-200 font-bold">42</span>
           </div>
+          <flag-input class="w-[20%] md:w-[15%]"></flag-input>
         </div>
       </aside>
     </main>
