feat: Enhance FlagInput component with modal close event handling and update visibility in Main

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -246,7 +246,10 @@
             >
               🗳️ Vote Map
             </button>
-            <div class="flex flex-col items-center sm:items-end w-full">
+            <div
+              id="flag-input-div"
+              class="flex flex-col items-center sm:items-end w-full"
+            >
               <flag-input class="w-[80px] md:w-[100px]"></flag-input>
             </div>
           </div>
