Add initial HTML structure for the client interface with header, main content, and footer

--- a/resources/terms-of-service.html
+++ b/resources/terms-of-service.html
@@ -13,6 +13,7 @@
         padding: 20px;
         color: #333;
       }
+
       h1 {
         text-align: center;
         color: #2c3e50;
@@ -20,26 +21,31 @@
         padding-bottom: 10px;
         border-bottom: 1px solid #eee;
       }
+
       h2 {
         color: #2980b9;
         margin-top: 30px;
         border-bottom: 1px solid #eee;
         padding-bottom: 5px;
       }
+
       ul {
         padding-left: 25px;
       }
+
       .updated-date {
         text-align: center;
         font-style: italic;
         margin-bottom: 30px;
       }
+
       .contact {
         margin-top: 40px;
         padding: 15px;
         background-color: #f9f9f9;
         border-radius: 5px;
       }
+
       .footer {
         margin-top: 50px;
         padding-top: 20px;
@@ -49,6 +55,7 @@
       }
     </style>
   </head>
+
   <body>
     <h1>Terms of Service</h1>
     <p class="updated-date"><strong>Last Updated: 4/29/2025</strong></p>
@@ -222,7 +229,70 @@
       California, without regard to its conflict of law provisions.
     </p>
 
-    <h2>15. Contact Us</h2>
+    <h2>15. Children’s Privacy</h2>
+    <p>
+      Our Service is not intended for children under the age of 13. We do not
+      knowingly collect personal information from children under 13. If you are
+      under 13, do not use or provide any information on this Service. If we
+      become aware that we have collected personal data from a child under 13
+      without verification of parental consent, we will take steps to remove
+      that information from our servers. If you believe we might have any
+      information from or about a child under 13, please contact us at
+      support@tacticfront.io.
+    </p>
+
+    <h2>16. Third-Party Services</h2>
+    <p>
+      Our Service may incorporate, interact with, or make use of third-party
+      services, APIs, and platforms, including but not limited to Discord and
+      other integrated providers. Your use of such third-party services is
+      subject to their respective terms and privacy policies, and we are not
+      responsible for the practices or content of any third-party services. We
+      may also display, include, or make available content, data, or features
+      provided by third parties. You acknowledge and agree that we are not
+      liable for any loss or damage caused by your use of any third-party
+      services or content accessed through our Service.
+    </p>
+
+    <h2>17. Fair Play and Safety</h2>
+    <p>
+      We are committed to maintaining a safe, fair, and enjoyable environment
+      for all users. By using our Service, you agree not to engage in cheating,
+      exploiting bugs or vulnerabilities, using unauthorized third-party
+      software, or any conduct that gives you or others an unfair advantage. Any
+      attempt to disrupt the normal operation of the Service, manipulate
+      gameplay, or harm the experience of other users may result in immediate
+      suspension or termination of your access to the Service, at our sole
+      discretion.
+    </p>
+    <p>
+      We reserve the right to monitor gameplay and user activity, investigate
+      complaints or suspicious activity, and take appropriate action to enforce
+      these standards. If you observe any unfair or harmful behavior, please
+      report it to us at support@tacticfront.io.
+    </p>
+
+    <h2>18. Changes to Terms</h2>
+    <p>
+      We reserve the right to modify or replace these Terms at any time. If a
+      revision is material, we will try to provide at least 30 days' notice
+      prior to any new terms taking effect. What constitutes a material change
+      will be determined at our sole discretion.
+    </p>
+    <p>
+      By continuing to access or use our Service after those revisions become
+      effective, you agree to be bound by the revised terms.
+    </p>
+
+    <h2>19. Miscellaneous</h2>
+    <p>
+      If any provision of these Terms is found to be invalid or unenforceable,
+      the remaining provisions will remain in full force and effect. No waiver
+      of any term shall be deemed a further or continuing waiver of such term or
+      any other term.
+    </p>
+
+    <h2>20. Contact Us</h2>
     <p class="contact">
       If you have any questions about these Terms, please contact us at: <br />
       support@tacticfront.io
