--- a/resources/terms-of-service.html
+++ b/resources/terms-of-service.html
@@ -298,6 +298,24 @@
       support@tacticfront.io
     </p>
 
+    <h2>21. Source Code & Open Source License</h2>
+    <p>
+      Portions of our Service, including the game client and server code, are
+      open source and available under the GNU General Public License (GPL) or
+      MIT License as specified in the project repository. You may access,
+      review, and use the source code in accordance with its license at our
+      official GitHub repository:
+    </p>
+    <p>
+      <a href="https://github.com/TacticFront/tacticfront.io" target="_blank"
+        >https://github.com/TacticFront/tacticfront.io</a
+      >
+    </p>
+    <p>
+      Please review the license terms and any third-party asset notices in the
+      repository before using or redistributing the source code.
+    </p>
+
     <div class="footer">
       <p>
         By using our Service, you acknowledge that you have read and understood
