change default clan

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -313,7 +313,7 @@
             class="profile-image rounded-full w-16 h-16 mx-auto"
           />
           <h2 class="username text-lg font-semibold text-center">Username</h2>
-          <p class="clan text-sm text-center">Clan: SMOL</p>
+          <p class="clan text-sm text-center">Clan: TF</p>
           <p class="rank text-sm text-center">Rank: Recruit</p>
           <p class="points text-sm text-center">Points: 1000</p>
         </div>
