change static routes

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -128,7 +128,7 @@
     <!-- Sidebar Nav (desktop), Hamburger (mobile) -->
     <nav
       id="left-menu"
-      class="sidebar fixed top-0 left-0 h-full w-64 bg-white/20 backdrop-blur-lg shadow-lg rounded-tr-2xl rounded-br-2xl flex-col p-6 z-20 space-y-4 hidden lg:flex"
+      class="sidebar fixed top-0 left-0 h-full w-64 bg-white/40 backdrop-blur-lg shadow-lg rounded-tr-2xl rounded-br-2xl flex-col p-6 z-20 space-y-4 hidden lg:flex"
     >
       <img
         src="../../resources/tacticfront/TacticFront-logo-small.png"
@@ -312,7 +312,9 @@
             alt="Profile Image"
             class="profile-image rounded-full w-16 h-16 mx-auto"
           />
-          <h2 class="username text-lg font-semibold text-center">Username</h2>
+          <h2 class="username text-lg font-semibold text-center">
+            Coming Soon
+          </h2>
           <p class="clan text-sm text-center">Clan: TF</p>
           <p class="rank text-sm text-center">Rank: Recruit</p>
           <p class="points text-sm text-center">Points: 1000</p>
@@ -406,14 +408,14 @@
       class="fixed bottom-0 w-full bg-white/20 backdrop-blur-md border-t border-white/10 py-2 px-4 text-center text-sm text-gray-800 dark:text-gray-100 flex justify-between items-center z-50"
     >
       <div>
-        <a
+        <!-- <a
           href="https://youtu.be/jvHEvbko3uw?si=znspkP84P76B1w5I"
           class="t-link"
           target="_blank"
           >How to Play</a
-        >
+        > -->
         <a
-          href="https://openfront.miraheze.org/wiki/Main_Page"
+          href="https://openlynerd.com/a/tacticfront"
           class="t-link"
           target="_blank"
           >Wiki</a
@@ -488,10 +490,10 @@
     </script>
 
     <!-- Analytics -->
-    <script
+    <!-- <script
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js"
       data-cf-beacon='{"token": "03d93e6fefb349c28ee69b408fa25a13"}'
-    ></script>
+    ></script> -->
   </body>
 </html>
