--- a/src/client/index.html
+++ b/src/client/index.html
@@ -139,7 +139,7 @@
         title="Single Player"
         translationKey="main.single_player"
         block
-        class="w-full"
+        class="w-full tf-button"
       ></o-button>
       <o-button
         id="help-button-sidebar"
@@ -147,7 +147,7 @@
         translationKey="main.instructions"
         block
         secondary
-        class="w-full"
+        class="w-full tf-button"
       ></o-button>
       <a
         class="discord-btn"
@@ -264,14 +264,14 @@
                 id="map-vote-button"
                 title="🗳️ Vote Maps"
                 block
-                class="glass-btn"
+                class="tf-button"
               ></o-button>
               <o-button
                 id="host-lobby-button-public"
                 title="Create Lobby"
                 translationKey="main.create_lobby"
                 block
-                class="glass-btn"
+                class="tf-button"
               ></o-button>
             </div>
           </div>
@@ -282,14 +282,14 @@
                 title="Create Lobby"
                 translationKey="main.create_lobby"
                 block
-                class="glass-btn"
+                class="tf-button"
               ></o-button>
               <o-button
                 id="join-private-lobby-button-private"
                 title="Join Lobby"
                 translationKey="main.join_lobby"
                 block
-                class="glass-btn"
+                class="tf-button"
               ></o-button>
             </div>
           </div>
