hide modal on mobile

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -332,7 +332,10 @@
     </aside>
 
     <!-- Mobile/tablet login panel, shown only below xl -->
-    <section class="flex xl:hidden w-full max-w-md mx-auto mt-6 px-2 z-20">
+    <section
+      class="flex xl:hidden w-full max-w-md mx-auto mt-6 px-2 z-20"
+      id="mobile-login-panel"
+    >
       <div
         class="bg-white/40 dark:bg-black/50 backdrop-blur-2xl rounded-3xl shadow-2xl border border-white/20 p-6 w-full space-y-6"
       >
