Added back settings menu

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -162,6 +162,19 @@
         />
         Join our Discord
       </a>
+
+      <button
+        id="settings-button"
+        title="Settings"
+        class="fixed bottom-4 right-4 z-50 rounded-full p-2 shadow-lg transition-colors duration-300 flex items-center justify-center"
+        style="width: 80px; height: 80px; background-color: #0075ff"
+      >
+        <img
+          src="../../resources/images/SettingIconWhite.svg"
+          alt="Settings"
+          style="width: 72px; height: 72px"
+        />
+      </button>
     </nav>
     <button
       id="mobile-menu-button"
@@ -223,6 +236,18 @@
         />
         Join our Discord
       </a>
+      <button
+        id="settings-button"
+        title="Settings"
+        class="fixed bottom-4 right-4 z-50 rounded-full p-2 shadow-lg transition-colors duration-300 flex items-center justify-center"
+        style="width: 80px; height: 80px; background-color: #0075ff"
+      >
+        <img
+          src="../../resources/images/SettingIconWhite.svg"
+          alt="Settings"
+          style="width: 72px; height: 72px"
+        />
+      </button>
     </nav>
 
     <!-- Main content -->
